K1J-406: Added ecs json logging and performance logging (#1156)
* K1J-406: Added logging package with functionality for ecs, mdc and performance logging

* K1J-406: Added mdc to MonitorlogService in web package

* K1J-406: Added mdc to MonitorlogService in notification-sender package

* K1J-406: Cleaned up files in logging package. Added initialization of Prometheus.

* K1J-406: Switch to use logmarkers from wc instead of infra.

* K1J-406: Added import of LoggingConfig in AppConfig

* K1J-406: Added import of LoggingConfig in AppConfig

* K1J-406: Switch to use logmarkers from wc instead of infra.

* K1J-406: Added aop-proxy to cxf-servlet xml-files

* K1J-406: Added @PerformanceLogging annotation to controllers in controller/api package

* K1J-406: Added @PerformanceLogging annotation to controllers in controller/facade package

* K1J-406: Moved LoggingConfig to confic package

* K1J-406: Added @PerformanceLogging annotation to controllers in controller/integration package

* K1J-406: Added @PerformanceLogging annotation to controllers in controller/internalapi package

* K1J-406: Added @PerformanceLogging annotation to controllers in controller/legacyintegration package

* K1J-406: Added @PerformanceLogging annotation to controllers in controller/moduleapi package

* K1J-406: Added @PerformanceLogging annotation to PageController

* K1J-406: Added @PerformanceLogging annotation jobs

* K1J-406: Some cleaning for ide warnings

* K1J-406: Added performance logging to ws methods, fmb update and service-now checks

* K1J-406: Fix for bug where webcert did not monitor log revocation of cert in certificate-service

* K1J-406: Corrected status in test for revoke cert in cs

* K1J-406: Set mdc trace and span in jobs notification redelivery and utkast lock job

* K1J-406: Set mdc trace and span in fmb job

* K1J-406: Set mdc params in notification functions initiated by amq queues

* K1J-406: Added mdc in certificate-sende