@@ -51,6 +51,8 @@ import se.inera.intyg.infra.security.common.model.UserOriginType;
 import se.inera.intyg.schemas.contract.Personnummer;
 import se.inera.intyg.webcert.common.service.exception.WebCertServiceErrorCodeEnum;
 import se.inera.intyg.webcert.common.service.exception.WebCertServiceException;
+import se.inera.intyg.webcert.logging.MdcLogConstants;
+import se.inera.intyg.webcert.logging.PerformanceLogging;
 import se.inera.intyg.webcert.web.auth.CustomAuthenticationSuccessHandler;
 import se.inera.intyg.webcert.web.service.user.dto.WebCertUser;
 import se.inera.intyg.webcert.web.web.controller.facade.util.ReactUriFactory;
@@ -128,6 +130,7 @@ public class IntygIntegrationController extends BaseIntegrationController {
     @Path("{certId}")
     @PrometheusTimeMethod
     @Deprecated(since = "2019")
+    @PerformanceLogging(eventAction = "intyg-integration-get-redirect-to-certificate", eventType = MdcLogConstants.EVENT_TYPE_ACCESS)
     public Response getRedirectToIntyg(@Context UriInfo uriInfo,
         @Context HttpServletRequest request,
         @PathParam(PARAM_CERT_ID) String intygId,
@@ -164,6 +167,7 @@ public class IntygIntegrationController extends BaseIntegrationController {
     @Path("/{certId}")
     @Consumes(MediaType.APPLICATION_FORM_URLENCODED)
     @PrometheusTimeMethod
+    @PerformanceLogging(eventAction = "intyg-integration-post-redirect-to-certificate", eventType = MdcLogConstants.EVENT_TYPE_ACCESS)
     public Response postRedirectToIntyg(@Context UriInfo uriInfo,
         @Context HttpServletRequest request,
         @PathParam(PARAM_CERT_ID) String intygId,
@@ -203,14 +207,14 @@ public class IntygIntegrationController extends BaseIntegrationController {
     /**
      * Fetches an certificate from IT or Webcert and then performs a redirect to the view that displays
      * the certificate.
-     *
+     * <p>
      * This entry point is only used when redirecting a POST after authentication from the
      * {@link CustomAuthenticationSuccessHandler}
      * where the custom handler has applied the deep-integration parameters on the session.
-     *
+     * <p>
      * This is a work-around for the issue where Springs default SavedRequestAuthenticationSuccessHandler only performs
      * URL-based redirect, e.g. our POST becomes a GET and all form-params are discarded.
-     *
+     * <p>
      * Note that this method requires the IntegrationParameters to be present or an exception will be thrown.
      *
      * @param intygId The id of the certificate to view.
@@ -218,6 +222,7 @@ public class IntygIntegrationController extends BaseIntegrationController {
     @GET
     @Path("{certId}/saved")
     @PrometheusTimeMethod
+    @PerformanceLogging(eventAction = "intyg-integration-get-redirect-to-certificate-saved", eventType = MdcLogConstants.EVENT_TYPE_ACCESS)
     public Response getRedirectToIntyg(@Context HttpServletRequest request,
         @Context UriInfo uriInfo,
         @PathParam(PARAM_CERT_ID) String intygId,
@@ -243,6 +248,7 @@ public class IntygIntegrationController extends BaseIntegrationController {
     @GET
     @Path("/{certId}/resume")
     @PrometheusTimeMethod
+    @PerformanceLogging(eventAction = "intyg-integration-resume-redirect-to-certificate", eventType = MdcLogConstants.EVENT_TYPE_ACCESS)
     public Response resumeRedirectToIntyg(
         @Context UriInfo uriInfo,
         @Context HttpServletRequest request,
@@ -265,7 +271,7 @@ public class IntygIntegrationController extends BaseIntegrationController {
         try {
             if (userHasNotSelectedVardenhet(enhetId)) {
                 if (userHasExactlyOneSelectableVardenhet(user)) {
-                    changeValdVardenhet(user.getVardgivare().get(0).getVardenheter().get(0).getId(), user);
+                    changeValdVardenhet(user.getVardgivare().getFirst().getVardenheter().getFirst().getId(), user);
                     final var prepareRedirectInfo = prepareRedirectToIntyg(intygId, user);
                     LOG.debug("Redirecting to view intyg {} of type {}", intygId, prepareRedirectInfo.getIntygTyp());
                     return buildViewCertificateResponse(uriInfo, prepareRedirectInfo);
